# agentwarehouses

./: .gitignore  .graphqlrc.yml  .lsp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  claude-progress.txt  codegen.ts  package-lock.json  package.json  pyproject.toml  release-please-config.json  scrapy.cfg  tsconfig.json
.claude/: settings.json
.claude/agents/: amodei.md  bezos.md  brown.md  cherny.md  crawl-reviewer.md  jobs.md  musk.md  page-analyzer.md  shannon.md  simons.md  su.md  thorp.md
.claude/hooks/: log-tool-sizes.sh  post-edit-lint.sh  pre-compact-save.sh  session-metadata-check.sh
.claude/rules/: auth-tokens.md  crawl-guidelines.md  model-tier-directive.md
.claude/sessions/: 01BaSxaTpGmGgQckCHqPKP1F.md  01SR15X9ZzoNJdV3qo3fTdmB.md  session_01WM3r1SLzp61f6xeBHQNXDS.md
.claude/skills/advisors/: SKILL.md
.claude/skills/crawl-audit/: SKILL.md
.claude/skills/crud-api/: SKILL.md
.claude/skills/crud-api-agent-teams/: SKILL.md
.claude/skills/crud-api-connectors/: SKILL.md
.claude/skills/crud-api-hooks/: SKILL.md
.claude/skills/crud-api-mcps/: SKILL.md
.claude/skills/crud-api-memories/: SKILL.md
.claude/skills/crud-api-plugins/: SKILL.md
.claude/skills/crud-api-sessions/: SKILL.md
.claude/skills/crud-api-skills/: SKILL.md
.claude/skills/crud-api-subagents/: SKILL.md
.claude/skills/crud-cli/: SKILL.md
.claude/skills/crud-cli-agent-teams/: SKILL.md
.claude/skills/crud-cli-connectors/: SKILL.md
.claude/skills/crud-cli-hooks/: SKILL.md
.claude/skills/crud-cli-mcps/: SKILL.md
.claude/skills/crud-cli-memories/: SKILL.md
.claude/skills/crud-cli-plugins/: SKILL.md
.claude/skills/crud-cli-sessions/: SKILL.md
.claude/skills/crud-cli-skills/: SKILL.md
.claude/skills/crud-cli-subagents/: SKILL.md
.claude/skills/crud-eval/: SKILL.md
.claude/skills/crud-graphql/: SKILL.md
.claude/skills/crud-graphql-agent-teams/: SKILL.md
.claude/skills/crud-graphql-connectors/: SKILL.md
.claude/skills/crud-graphql-hooks/: SKILL.md
.claude/skills/crud-graphql-mcps/: SKILL.md
.claude/skills/crud-graphql-memories/: SKILL.md
.claude/skills/crud-graphql-plugins/: SKILL.md
.claude/skills/crud-graphql-sessions/: SKILL.md
.claude/skills/crud-graphql-skills/: SKILL.md
.claude/skills/crud-graphql-subagents/: SKILL.md
.claude/skills/crud-sdk/: SKILL.md
.claude/skills/crud-sdk-agent-teams/: SKILL.md
.claude/skills/crud-sdk-connectors/: SKILL.md
.claude/skills/crud-sdk-hooks/: SKILL.md
.claude/skills/crud-sdk-mcps/: SKILL.md
.claude/skills/crud-sdk-memories/: SKILL.md
.claude/skills/crud-sdk-plugins/: SKILL.md
.claude/skills/crud-sdk-sessions/: SKILL.md
.claude/skills/crud-sdk-skills/: SKILL.md
.claude/skills/crud-sdk-subagents/: SKILL.md
.claude/skills/graphql-tools/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/research-session/: SKILL.md
.claude/skills/think/: SKILL.md
.claude/skills/tool-design-checklist/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  well-architected.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml
assets/uda-user-surface/: domain_model.ttl  kimball_dimensions.ts  kimball_facts.ts  mappings.ttl  schema.avro  schema.graphqls
claude_code_models/: .release-please-manifest.json  pyproject.toml  release-please-config.json
claude_code_models/claude_code_models/: __init__.py
claude_code_models/claude_code_models/models/: __init__.py  agents.py  channels.py  checkpoints.py  cli.py  hooks.py  mcp.py  plugins.py  sessions.py  skills.py  tools.py  version.py
claude_code_models/tests/: conftest.py  test_agents.py  test_channels.py  test_cli.py  test_hooks.py  test_mcp.py  test_plugins.py  test_sessions.py  test_skills.py  test_tools.py  test_version.py
java/: build.gradle.kts  settings.gradle.kts
output/: github_org_manifests.jsonl
schema/: 00_extensions.sql  agg_monthly_source.sql  agg_weekly_persona.sql  bloom_filter_state.sql  crawl_runs.sql  customer_insights.sql  dim_content_type.sql  dim_date.sql  dim_entity_type.sql  dim_persona.sql  dim_plugin.sql  dim_source.sql  doc_entities.sql  doc_pages.sql  doc_sources.sql  fact_doc_crawls.sql  fact_emotion_probes.sql  fact_entity_extractions.sql  fact_searches.sql  fact_social_ads.sql  fact_social_metrics.sql  fact_social_posts.sql  hf_datasets_schema.sql  migrate.sql  palace_drawers.sql  star_schema_pg_graphql.sql  telemetry_spans.sql  video_pipeline.graphql  view_unified_social_ads.sql  view_unified_social_metrics.sql  wbr_reports.sql
scripts/: collect_session_data.sh  generate_crud_skills.py  github_graphql_fetch.mjs  github_org_repos_graphql.py  hf_etl_pipeline.py  install_pkgs.sh  neon_repo_inventory.py
sessions/: __init__.py  lookup.py  manager.py  session_template.py  session_trace_01FSNRonfPyKuLgDezKEY3bq.md  surface_lookup.py
sessions/session_safety001/: conventionaltraces_assessment.md  findings.md  metadata.json  scratchpad.md  session_trace.md
sessions/session_safety001/pages/: 001_bloom---llm-behavioral-evaluation-framework.md  002_petri---alignment-auditing-agent.md  003_persona-vectors---activation-steering-for-character-traits.md  004_transformer-circuits-thread---research-index.md  005_conventional-commits-v100-specification.md  006_circuit-tracer---mechanistic-interpretability-library.md  007_research-agent---multi-agent-research-system-demo.md  (+2 more)
sessions/templates/: blog_post.md.j2  scratchpad.md.j2
src/agentwarehouses/: items.py  log.py  markdown.py  prompt_caching.py  settings.py
src/social/: graphql-client.ts  types.ts
tests/: conftest.py  test_claude_builder_spider.py  test_clio.py  test_eval_schema.py  test_generation.py  test_log.py  test_markdown.py  test_models.py  test_pipelines.py  test_prompt_caching.py  test_sessions.py  test_spider.py  test_video_models.py
uda/: ARCHITECTURE.md  SESSION_TRACE.md  domain_model.ttl  kimball_dimensions.ts  kimball_facts.ts  mappings.ttl  schema.avro  schema.graphqls
(+116 files in other folders)
