[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwarehouses"
version = "0.2.0"
description = "Scrapy sitemap crawler for llms.txt documentation pages with Pydantic data models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "scrapy>=2.12,<3.0",
    "orjson>=3.10,<4.0",
    "rbloom>=1.5,<2.0",
    "colorlog>=6.10,<7.0",
]

[project.optional-dependencies]
models = [
    "pydantic>=2.9,<4.0",
]
warehouse = [
    "pydantic>=2.9,<4.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlmodel>=0.0.22,<1.0",
    "sentence-transformers>=3.3,<4.0",
    "networkx>=3.4,<4.0",
    "dspy>=3.0,<4.0",
    "httpx>=0.28,<1.0",
    "mempalace>=3.0,<4.0",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pydantic>=2.9,<4.0",
    "pre-commit>=4.0",
]

[tool.release-please]
release-type = "python"
package-name = "agentwarehouses"
bump-minor-pre-major = true

[project.entry-points."scrapy"]
settings = "agentwarehouses.settings"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
".claude/skills/*/scripts/*.py" = ["E501"]
"scripts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring Scrapy or filesystem",
    "models: Pydantic model validation tests",
    "evals: AgentSkills.io eval schema tests",
    "slow: tests that may take >5s",
]
addopts = [
    "--strict-markers",
    "--timeout=30",
    "-x",
]

[tool.coverage.run]
source = ["agentwarehouses"]
omit = ["*/settings.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
